--- a/web/index.html
+++ b/web/index.html
@@ -31,6 +31,10 @@
 
   <title>vocal_canvas</title>
   <link rel="manifest" href="manifest.json">
+  
+  <!-- Preconnect to Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
